RbA Build/src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Create_SO__c</fullName>
        <formula>IMAGE (&quot;resource/CreateSO&quot;,&quot;Create Service Order&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create SO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>The last date all or part of this asset was received.</description>
        <inlineHelpText>The last date all or part of this asset was received.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The link to the original asset in the case where this product has replaced another one.</description>
        <inlineHelpText>The link to the original asset in the case where this product has replaced another one.</inlineHelpText>
        <label>Original Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Replacement Assets</relationshipLabel>
        <relationshipName>OriginalAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <description>The number of items received</description>
        <inlineHelpText>The number of items received</inlineHelpText>
        <label>Quantity Received</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Sold Order</inlineHelpText>
        <label>Sold Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Wholesale_Cost__c</fullName>
        <label>Unit Wholesale Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variant_Number__c</fullName>
        <description>The variant number for this asset.</description>
        <inlineHelpText>The variant number for this asset.</inlineHelpText>
        <label>Variant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <recordTypes>
        <fullName>Installed_Products</fullName>
        <active>true</active>
        <description>Windows and Doors installed by RbA</description>
        <label>Installed Products</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>